<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollview"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFBC67"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/padding_margin_15"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:text="@string/main_title"
            android:textColor="#AC6C82"
            android:textSize="@dimen/big_textview_title_40"
            android:textStyle="bold" />


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/padding_margin_30"
            android:adjustViewBounds="true"
            android:contentDescription="@string/world_map"
            android:scaleType="fitXY"
            android:src="@drawable/map" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/padding_margin_20"
                android:background="#AC6C82"
                android:orientation="vertical"
                android:paddingLeft="@dimen/padding_margin_10"
                android:paddingRight="@dimen/padding_margin_10">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/padding_margin_10"
                    android:paddingTop="@dimen/padding_margin_10"
                    android:text="@string/name"
                    android:textColor="#e5e7e9"
                    android:textSize="@dimen/normal_textview_title_24" />

                <EditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/padding_margin_20"
                    android:hint="@string/enter_name"
                    android:paddingBottom="@dimen/padding_margin_10"
                    android:paddingTop="@dimen/padding_margin_10"
                    android:textColor="#e5e7e9"
                    android:textColorHint="#e5e7e9" />
            </LinearLayout>


            <RadioGroup
                android:id="@+id/radioGroup1"
                style="@style/Radio">

                <TextView
                    style="@style/question_text"
                    android:text="@string/riga" />

                <RadioButton
                    android:text="@string/thailand"
                    style="@style/radio_button" />

                <RadioButton
                    style="@style/radio_button"
                    android:text="@string/hungary"
                    android:textColor="#fdd9be" />

                <RadioButton
                    android:id="@+id/answer_1"
                    style="@style/radio_button"
                    android:text="@string/lativa"
                    android:textColor="#fdd9be" />

                <RadioButton
                    android:text="@string/estonia"
                    style="@style/radio_button_no_padding" />

            </RadioGroup>


            <RadioGroup
                android:id="@+id/radioGroup2"
                style="@style/Radio">


                <TextView
                    style="@style/question_text"
                    android:text="@string/tallin" />

                <RadioButton
                    android:id="@+id/answer_2"
                    style="@style/radio_button"
                    android:text="@string/estonia" />

                <RadioButton
                    style="@style/radio_button"
                    android:text="@string/malysia" />

                <RadioButton
                    style="@style/radio_button"
                    android:text="@string/senegal" />

                <RadioButton
                    style="@style/radio_button_no_padding"
                    android:text="@string/japan"
                    />

            </RadioGroup>


            <RadioGroup
                android:id="@+id/radioGroup3"
                style="@style/Radio">

                <TextView
                    style="@style/question_text"
                    android:text="@string/abudhabi" />

                <RadioButton
                    android:id="@+id/answer_3"
                    style="@style/radio_button"
                    android:text="@string/uae"
                    />

                <RadioButton
                    style="@style/radio_button"
                    android:text="@string/sudan" />

                <RadioButton
                    style="@style/radio_button"
                    android:text="@string/ghana"/>

                <RadioButton
                    style="@style/radio_button_no_padding"
                    android:text="@string/jordan"/>

            </RadioGroup>


            <RadioGroup
                android:id="@+id/radioGroup4"
                style="@style/Radio">

                <TextView
                    style="@style/question_text"
                    android:text="@string/accra" />

                <RadioButton
                    style="@style/radio_button"
                    android:text="@string/senegal" />

                <RadioButton
                    style="@style/radio_button"
                    android:text="@string/cameron" />

                <RadioButton
                    style="@style/radio_button"
                    android:text="@string/thailand" />

                <RadioButton
                    android:id="@+id/answer_4"
                    style="@style/radio_button_no_padding"
                    android:text="@string/ghana"/>

            </RadioGroup>


            <RadioGroup
                android:id="@+id/radioGroup5"
                style="@style/Radio">

                <TextView
                    style="@style/question_text"
                    android:text="@string/amman" />

                <RadioButton
                    style="@style/radio_button"
                    android:text="@string/yemen" />

                <RadioButton
                    style="@style/radio_button"
                    android:text="@string/egypt" />

                <RadioButton
                    android:id="@+id/answer_5"
                    style="@style/radio_button"
                    android:text="@string/jordan" />

                <RadioButton
                    style="@style/radio_button_no_padding"
                    android:text="@string/syria" />

            </RadioGroup>


            <RadioGroup
                android:id="@+id/radioGroup6"
                style="@style/Radio">

                <TextView
                    style="@style/question_text"
                    android:text="@string/budapest" />

                <RadioButton

                    style="@style/radio_button"
                    android:text="@string/ireland" />

                <RadioButton
                    style="@style/radio_button"
                    android:text="@string/chile" />

                <RadioButton
                    style="@style/radio_button"
                    android:text="@string/yemen" />

                <RadioButton
                    android:id="@+id/answer_6"
                    style="@style/radio_button_no_padding"
                    android:text="@string/hungary" />

            </RadioGroup>


            <RadioGroup
                android:id="@+id/radioGroup7"
                style="@style/Radio">

                <TextView
                    style="@style/question_text"
                    android:text="@string/dublin" />

                <RadioButton
                    android:id="@+id/answer_7"
                    style="@style/radio_button"
                    android:text="@string/ireland" />

                <RadioButton
                    style="@style/radio_button"
                    android:text="@string/peru" />

                <RadioButton
                    style="@style/radio_button"
                    android:text="@string/switzerland" />

                <RadioButton
                    style="@style/radio_button_no_padding"
                    android:text="@string/bulgaria" />

            </RadioGroup>

            <RadioGroup
                android:id="@+id/radioGroup8"
                style="@style/Radio">

                <TextView
                    style="@style/question_text"
                    android:text="@string/wellington" />

                <RadioButton
                    style="@style/radio_button"
                    android:text="@string/thailand"/>

                <RadioButton
                    style="@style/radio_button"
                    android:text="@string/costarica"/>

                <RadioButton
                    style="@style/radio_button"
                    android:text="@string/slovenia" />

                <RadioButton
                    android:id="@+id/answer_8"
                    style="@style/radio_button_no_padding"
                    android:text="@string/newzealand" />

            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                style="@style/Radio">
                <TextView
                    style="@style/question_text"
                    android:text="@string/spain" />
                <CheckBox
                    android:id="@+id/wrong1"
                    android:text="@string/lisbon_city"
                    style="@style/checkbox" />

                <CheckBox
                    android:id="@+id/right1"
                    android:text="@string/madrid"
                    style="@style/checkbox"/>

                <CheckBox
                    android:id="@+id/right2"
                    android:text="@string/granada"
                    style="@style/checkbox"/>

                <CheckBox
                    android:id="@+id/wrong2"
                    android:text="@string/stutgart"
                    style="@style/checkbox"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                style="@style/Radio">
                <TextView
                    style="@style/question_text"
                    android:text="@string/Tokyo" />

                <EditText
                    android:id="@+id/edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/answer"
                    android:textColor="#e5e7e9"
                    android:textColorHint="#e5e7e9"
                    />

            </LinearLayout>

            <TextView
                android:id="@+id/result_display"
                style="@style/result_display_text_view" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/padding_margin_10"
                android:orientation="horizontal"
                android:baselineAligned="false">


                <Button
                    style="@style/bellow_buttons"
                    android:onClick="getResults"
                    android:text="@string/get_result"
                    android:focusable="true"
                    />

                <Button
                    android:onClick="resetQuiz"
                    android:text="@string/retry_quiz"
                    style="@style/bellow_buttons" />

                <Button
                    style="@style/bellow_buttons"
                    android:onClick="correctAnswers"
                    android:text="@string/show_answer" />


            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</ScrollView>
