<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="#FFBC67">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#AC6C82"
            android:paddingBottom="@dimen/padding_margin_10"
            android:paddingTop="@dimen/padding_margin_10"
            android:text="@string/title"
            android:textAlignment="center"
            android:textColor="#e5e7e9"
            android:textSize="@dimen/medium_textview_title_30" />

        <TextView
            android:layout_margin="@dimen/padding_margin_10"
            android:text="@string/about_title"
            android:textSize="@dimen/normal_textview_title_24"
            style="@style/text" />

        <TextView
            style="@style/text"
            android:layout_marginLeft="@dimen/padding_margin_10"
            android:lineSpacingExtra="@dimen/textview_spacing_2"
            android:text="@string/about"
            android:textSize="@dimen/small_textview_title_18" />


        <Button
            android:id="@+id/start_quiz"
            android:layout_width="@dimen/button_width_200"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="#455C7B"
            android:clickable="true"
            android:linksClickable="true"
            android:text="@string/start_quiz"
            android:textColor="#fdd9be" />

    </LinearLayout>

</ScrollView>